modified:   CSS/style.css 	modified:   HTML/blog.html 	modified:   HTML/causes.html 	modified:   HTML/index.html 	modified:   HTML/problem.html 	modified:   HTML/single.html

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,41 @@
+/* FONT */
+.overlock-regular {
+  font-family: "Overlock", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.overlock-bold {
+  font-family: "Overlock", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.overlock-black {
+  font-family: "Overlock", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.overlock-regular-italic {
+  font-family: "Overlock", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.overlock-bold-italic {
+  font-family: "Overlock", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.overlock-black-italic {
+  font-family: "Overlock", sans-serif;
+  font-weight: 900;
+  font-style: italic;
+}
+
+
 /* Base */
 html {
   overflow-x: hidden; }
@@ -249,7 +287,7 @@ h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
   font-weight: 300;
   color: #364d59;
-  font-family: "Roboto", serif; }
+  font-family: "Overlock", sans-serif; }
 
 .border-2 {
   border-width: 2px; }
@@ -437,7 +475,7 @@ h1, h2, h3, h4, h5,
       left: 0;
       font-size: 20px;
       top: -.3rem;
-      font-family: "icomoon";
+      font-family: "Overlock", sans-serif;
       content: "\e5ca";
       position: absolute; }
   .ul-check.white li:before {
@@ -527,7 +565,7 @@ h1, h2, h3, h4, h5,
           -webkit-transform: translateY(-50%);
           -ms-transform: translateY(-50%);
           transform: translateY(-50%);
-          font-family: 'icomoon'; }
+          font-family: "Overlock", sans-serif; }
       .site-navbar .site-navigation .site-menu .has-children .dropdown {
         visibility: hidden;
         opacity: 0;
@@ -695,7 +733,7 @@ h1, h2, h3, h4, h5,
       .site-mobile-menu .site-nav-wrap .arrow-collapse:before {
         font-size: 12px;
         z-index: 20;
-        font-family: "icomoon";
+        font-family: "Overlock", sans-serif;
         content: "\f078";
         position: absolute;
         top: 50%;
@@ -995,7 +1033,7 @@ h1, h2, h3, h4, h5,
     font-style: italic;
     font-size: 18px;
     color: #000;
-    font-family: 'Georgia', Times, serif;
+    font-family: "Overlock", sans-serif;
     position: relative; }
   .block-testimony-1 figure {
     position: relative;
@@ -1413,7 +1451,7 @@ h1, h2, h3, h4, h5,
     top: 1rem;
     font-size: 2rem;
     color: #00a651;
-    font-family: "icomoon";
+    font-family: "Overlock", sans-serif;
     content: "\e86c"; }
   .feature-3 h3 {
     font-size: 1.3rem; }
@@ -1482,7 +1520,7 @@ h1, h2, h3, h4, h5,
     right: 0;
     content: "\e317";
     position: absolute;
-    font-family: 'icomoon'; }
+    font-family: "Overlock", sans-serif; }
 
 .heading-39291 {
   text-transform: uppercase;
@@ -1644,10 +1682,10 @@ h1, h2, h3, h4, h5,
   .box-92819 h1 {
     font-weight: 900 !important;
     font-size: 5rem;
-    font-family: "Mansalva", cursive !important; }
+    font-family: "Overlock", sans-serif; }
 
 .text-cursive {
-  font-family: "Mansalva", cursive !important; }
+  font-family: "Overlock", sans-serif; }
 
 .media-02819 {
   margin-bottom: 60px; }
