--- a/CSS/app.css
+++ b/CSS/app.css
@@ -115,3 +115,50 @@
     font-weight: 800;
     color: rgb(0, 0, 0);
   }
+
+.new-button{
+  cursor: pointer;
+    color: black;
+    background-color: white;
+    border: none;
+    font-size: large;
+    display: inline-block;
+    position: relative;
+}
+
+.new-button::after {
+    content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: black;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.new-button:hover::after {
+    transform: scaleX(1);
+  transform-origin: bottom left;
+
+}
+
+.header-button {
+    background-color: rgb(33, 50, 59);
+    color: white;
+}
+
+.header-button::after {
+    content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
