--- a/CSS/app.css
+++ b/CSS/app.css
@@ -1,3 +1,4 @@
+
 .hero-section {
     width: 100%;
     height: 1000px;
@@ -13,9 +14,6 @@
     z-index: -1;
 }
 
-
-
- /* bjbhvgvhv.vjhj  why im oin nionnm,.bjkl */
 
 .hero-container {
     display: flex;
@@ -97,6 +95,7 @@
   .d-button:hover::after {
     opacity: 1;
     transform: scale(1,1);
+    color: #ECB83D;
   }
 
   .d-button:hover{
@@ -142,6 +141,7 @@
 .new-button:hover::after {
     transform: scaleX(1);
   transform-origin: bottom left;
+  color: #ECB83D;
 
 }
 
