--- a/CSS/app.css
+++ b/CSS/app.css
@@ -1,3 +1,8 @@
+.allura-regular {
+  font-family: "Allura", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
 
 .hero-section {
     width: 100%;
@@ -27,7 +32,8 @@
 }
 
 .title {
-    font-size: 100px;
+    font-family: "Allura", sans-serif;
+    font-size: 200px;
     font-weight: 800;
     display: flex;
     justify-content: center;
