--- a/CSS/app.css
+++ b/CSS/app.css
@@ -1,9 +1,9 @@
 .allura-regular {
-  font-family: "Allura", cursive;
-  font-weight: 400;
-  font-style: normal;
-}
-
+    font-family: "Allura", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 .hero-section {
     width: 100%;
     height: 1000px;
@@ -32,8 +32,7 @@
 }
 
 .title {
-    font-family: "Allura", sans-serif;
-    font-size: 200px;
+    font-size: 100px;
     font-weight: 800;
     display: flex;
     justify-content: center;
@@ -53,9 +52,10 @@
 .demo-title {
     font-size: 40px;
     font-weight: 800;
-    margin-left: 650px;
+    margin-left: 750px;
     color: rgb(0, 0, 0);
 }
+/**/
 
 .d-button {
     margin-left: 810px;
