Removed ALL dc3545

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1768,7 +1768,7 @@ h1, h2, h3, h4, h5,
         height: 100%;
         mix-blend-mode: screen; }
     .feature-29192-wrap .feature-29192.overlay-danger:before {
-      background-color: #dc3545; }
+      background-color: #702b1f; }
     .feature-29192-wrap .feature-29192.overlay-success:before {
       background-color: #ffc107; }
     .feature-29192-wrap .feature-29192.overlay-warning:before {
