--- a/CSS/app.css
+++ b/CSS/app.css
@@ -34,11 +34,14 @@
 .title {
     font-size: 100px;
     font-weight: 800;
-    width: 100vh;
+    /* width: 50vh; */
+    width: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
     color: rgb(255, 255, 255);
+    padding: 0;
+    margin: 0;
 }
 
 .demo-container {
@@ -49,6 +52,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: "Overlock", sans-serif;
 
 }
 
