--- a/CSS/app.css
+++ b/CSS/app.css
@@ -32,10 +32,10 @@
 }
 
 .title {
-    font-size: 100px;
+    font-size: 275px;
     font-weight: 800;
-    /* width: 50vh; */
-    width: 25%;
+    width: 45vh;
+    /* width: 10%; */
     display: flex;
     justify-content: center;
     align-items: center;
