--- a/CSS/app.css
+++ b/CSS/app.css
@@ -34,12 +34,12 @@
 .title {
     font-size: 275px;
     font-weight: 800;
-    width: 45vh;
+    width: max-content;
     /* width: 10%; */
     display: flex;
     justify-content: center;
     align-items: center;
-    color: rgb(255, 255, 255);
+    color: beige;
     padding: 0;
     margin: 0;
 }
@@ -48,11 +48,12 @@
     display: flex;
     height: 400px;
     width: 100%;
-    margin-top: 100px;
+    padding-top: 100px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: "Overlock", sans-serif;
+    background-color: beige;
 
 }
 
@@ -61,6 +62,8 @@
     font-weight: 800;
     flex: 1;
     color: rgb(0, 0, 0);
+    top: 0;
+    background-color: beige;
 }
 /**/
 
@@ -225,7 +228,7 @@
 .new-button{
   cursor: pointer;
     color: #211510;
-    background-color: white;
+    background-color: beige;
     border: none;
     font-size: large;
     display: inline-block;
