centered and no gradient

--- a/CSS/app.css
+++ b/CSS/app.css
@@ -10,8 +10,6 @@
     background-image: url(../images/bck_img.png);
     background-size: cover;
     z-index: -1;
-    mask-image: linear-gradient(black, transparent);
-    -webkit-mask-image: linear-gradient(black 70%, transparent 100%);
 }
 
 .hero-section .opacity{
@@ -35,7 +33,7 @@
 .title {
     font-size: 275px;
     font-weight: 800;
-    width: max-content;
+    width: 35vh;
     /* width: 10%; */
     display: flex;
     justify-content: center;
